# BOS_Custom_WF_tt_metal

./: INSTALLING.md  README.md  conftest.py  create_venv.sh  env_set.sh  hello.sh  kill_py.sh  remove_cache.sh  tool_env.sh
cmake/: version.cmake
models/: README.md  requirements-model.txt
ttnn/cpp/ttnn/operations/bos/: CMakeLists.txt  bos_pybind.cpp  bos_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_deformable_attention/: bos_deformable_attention.cpp  bos_deformable_attention.hpp  bos_deformable_attention_pybind.cpp  bos_deformable_attention_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_deformable_attention/device/: bos_deformable_attention_op.cpp  bos_deformable_attention_op.hpp  bos_deformable_attention_program_factory.cpp  bos_deformable_attention_program_factory.hpp
ttnn/cpp/ttnn/operations/bos/bos_getitem/: bos_getitem.cpp  bos_getitem.hpp  bos_getitem_pybind.cpp  bos_getitem_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_getitem/device/: bos_getitem_device_operation.cpp  bos_getitem_device_operation.hpp  bos_getitem_rm_factory.cpp
ttnn/cpp/ttnn/operations/bos/bos_getitem/device/bos_getitem_kernels/: reader_bos_getitem.cpp
ttnn/cpp/ttnn/operations/bos/bos_grid_sample/: bos_grid_sample.cpp  bos_grid_sample.hpp  bos_grid_sample_pybind.cpp  bos_grid_sample_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_grid_sample/device/: bos_grid_sample_op.cpp  bos_grid_sample_op.hpp  bos_grid_sample_program_factory.cpp  bos_grid_sample_program_factory.hpp
ttnn/cpp/ttnn/operations/bos/bos_non_zero_indices/: bos_non_zero_indices.cpp  bos_non_zero_indices.hpp  bos_non_zero_indices_pybind.cpp  bos_non_zero_indices_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_non_zero_indices/device/: bos_non_zero_indices_op.cpp  bos_non_zero_indices_op.hpp  bos_non_zero_indices_program_factory.cpp
ttnn/cpp/ttnn/operations/bos/bos_setitem/: bos_setitem.cpp  bos_setitem.hpp  bos_setitem_pybind.cpp  bos_setitem_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_setitem/device/: bos_setitem_op.cpp  bos_setitem_op.hpp  bos_setitem_program_factory.cpp  bos_setitem_program_factory.hpp
ttnn/cpp/ttnn/operations/bos/bos_sharded/: bos_sharded_common.cpp  bos_sharded_common.hpp
ttnn/cpp/ttnn/operations/bos/bos_sharded/bos_reshard/: bos_reshard.cpp  bos_reshard.hpp  bos_reshard_pybind.cpp  bos_reshard_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_sharded/bos_reshard/device/: bos_nd_reshard_program_factory.cpp  bos_nd_reshard_program_factory.hpp  bos_reshard_op.cpp  bos_reshard_op.hpp  bos_reshard_program_factory.cpp  bos_reshard_program_factory.hpp
ttnn/cpp/ttnn/operations/bos/bos_ssr_deformable_attention/: bos_ssr_deformable_attention.cpp  bos_ssr_deformable_attention.hpp  bos_ssr_deformable_attention_pybind.cpp  bos_ssr_deformable_attention_pybind.hpp
ttnn/cpp/ttnn/operations/bos/bos_ssr_deformable_attention/device/: bos_ssr_deformable_attention_op.cpp  bos_ssr_deformable_attention_op.hpp  bos_ssr_deformable_attention_program_factory.cpp  bos_ssr_deformable_attention_program_factory.hpp
(+1003 files in other folders)
